test/parse/bad-toplevel.txt
;;; ERROR: 1
(foo bar)
(;; STDERR ;;;
out/test/parse/bad-toplevel.txt:2:2: error: unexpected token "foo"
(foo bar)
 ^^^
out/test/parse/bad-toplevel.txt:2:6: error: unexpected token "bar"
(foo bar)
     ^^^
out/test/parse/bad-toplevel.txt:2:9: error: syntax error, unexpected )
(foo bar)
        ^
;;; STDERR ;;)
